--- a/notebooks/question_1/data_cleaning.ipynb
+++ b/notebooks/question_1/data_cleaning.ipynb
@@ -16,18 +16,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/Naoufal_1/Documents/airbnb_exploration/airbnb_exploration/.venv/lib/python3.9/site-packages/sklearn/preprocessing/_encoders.py:868: FutureWarning: `sparse` was renamed to `sparse_output` in version 1.2 and will be removed in 1.4. `sparse_output` is ignored unless you leave `sparse` to its default value.\n",
+      "/Users/Naoufal_1/Documents/airbnb/.venv/lib/python3.9/site-packages/sklearn/preprocessing/_encoders.py:868: FutureWarning: `sparse` was renamed to `sparse_output` in version 1.2 and will be removed in 1.4. `sparse_output` is ignored unless you leave `sparse` to its default value.\n",
       "  warnings.warn(\n",
-      "/Users/Naoufal_1/Documents/airbnb_exploration/airbnb_exploration/.venv/lib/python3.9/site-packages/sklearn/preprocessing/_encoders.py:868: FutureWarning: `sparse` was renamed to `sparse_output` in version 1.2 and will be removed in 1.4. `sparse_output` is ignored unless you leave `sparse` to its default value.\n",
+      "/Users/Naoufal_1/Documents/airbnb/.venv/lib/python3.9/site-packages/sklearn/preprocessing/_encoders.py:868: FutureWarning: `sparse` was renamed to `sparse_output` in version 1.2 and will be removed in 1.4. `sparse_output` is ignored unless you leave `sparse` to its default value.\n",
       "  warnings.warn(\n",
-      "/Users/Naoufal_1/Documents/airbnb_exploration/airbnb_exploration/.venv/lib/python3.9/site-packages/sklearn/preprocessing/_encoders.py:868: FutureWarning: `sparse` was renamed to `sparse_output` in version 1.2 and will be removed in 1.4. `sparse_output` is ignored unless you leave `sparse` to its default value.\n",
+      "/Users/Naoufal_1/Documents/airbnb/.venv/lib/python3.9/site-packages/sklearn/preprocessing/_encoders.py:868: FutureWarning: `sparse` was renamed to `sparse_output` in version 1.2 and will be removed in 1.4. `sparse_output` is ignored unless you leave `sparse` to its default value.\n",
       "  warnings.warn(\n"
      ]
     }
@@ -74,6 +74,9 @@
     "    \n",
     "    Returns:\n",
     "        df (pd.DataFrame): Airbnb listings data with price and rate converted to float.\n",
+    "\n",
+    "    Note:\n",
+    "    check https://www.ritchieng.com/pandas-changing-datatype/ for more info about this processing.\n",
     "    \"\"\"\n",
     "    # Convert price to float ($100,000 -> 100000)\n",
     "    if df['price'].dtype == 'object':\n",
@@ -309,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -708,7 +711,7 @@
        "[40438 rows x 610 columns]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -719,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -743,7 +746,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -759,6 +762,7 @@
     }
    ],
    "source": [
+    "# check https://github.com/ResidentMario/missingno for more information\n",
     "import missingno as msno\n",
     "\n",
     "# create a new df with only the numerical columns and replace number_of_reviews that are 0 with NaN\n",
@@ -772,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -781,7 +785,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -803,9 +807,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/kk/3n5ft7ts6fjgmmp11zwz_ybh0000gn/T/ipykernel_23033/2762536778.py:32: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df[columns_to_impute] = imputer.fit_transform(df[columns_to_impute])\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -1196,7 +1212,7 @@
        "[39665 rows x 611 columns]"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1248,6 +1264,8 @@
     "    \n",
     "    Returns:\n",
     "        missing_values (pd.Series): percentage of missing values for each column.\n",
+    "    Note:\n",
+    "    For more details, check similar methods in https://stackoverflow.com/questions/51070985/find-out-the-percentage-of-missing-values-in-each-column-in-the-given-dataset\n",
     "    \"\"\"\n",
     "    missing_values = df.apply(lambda x: sum(x.isnull()), axis=0)\n",
     "    missing_values = missing_values[missing_values > 0] / df.shape[0] * 100\n",
@@ -1261,7 +1279,7 @@
     "print(check_missing_values(preprocessed_data))\n",
     "\n",
     "# save preprocessed data in csv file\n",
-    "preprocessed_data.to_csv('../../data/processed/question_1/listings_preprocessed_onehot.csv', index=False)\n",
+    "preprocessed_data.to_csv('../../data/processed/question_1/listings_preprocessed_onehot.csv.gz', index=False, compression='gzip')\n",
     "preprocessed_data\n"
    ]
   },
