--- a/notebooks/question_3/question3.ipynb
+++ b/notebooks/question_3/question3.ipynb
@@ -2596,7 +2596,7 @@
     "week_days = [i for i in range(7)]\n",
     "weekday_groups = [filtered_calendar.loc[filtered_calendar['weekday'] == day, 'price'] for day in week_days]\n",
     "\n",
-    "# Perform one-way ANOVA test\n",
+    "# Perform one-way ANOVA test (ref: https://docs.scipy.org/doc/scipy/reference/generated/scipy.stats.f_oneway.html)\n",
     "f_val, p_val = stats.f_oneway(*weekday_groups)\n",
     "print(f\"One-way ANOVA F-value: {f_val}\")\n",
     "print(f\"One-way ANOVA p-value: {p_val}\")"
@@ -3005,7 +3005,7 @@
     "availability_count = calendar_avail.groupby('listing_id')['available'].sum().rename('num_available_days')\n",
     "calendar_avail = calendar_avail.merge(availability_count, on='listing_id')\n",
     "\n",
-    "# Group the number of available days into 3 categories.\n",
+    "# Group the number of available days into 3 categories based on the data distribution\n",
     "quantiles = [0, .33, .66, 1.]\n",
     "categories = ['low', 'medium', 'high']\n",
     "calendar_avail['availability_category'] = pd.qcut(calendar_avail['num_available_days'], q=quantiles, labels=categories)\n",
@@ -3588,7 +3588,7 @@
     "availability_count = calendar_avail.groupby('listing_id')['available'].sum().rename('num_available_days')\n",
     "calendar_avail = calendar_avail.merge(availability_count, on='listing_id')\n",
     "\n",
-    "# Group the number of available days into 3 categories.\n",
+    "# Group the number of available days into 3 categories based on the data distribution\n",
     "calendar_avail['availability_category'] = pd.qcut(calendar_avail['num_available_days'], q=[0, .33, .66, 1], labels=['low', 'medium', 'high'])\n",
     "\n",
     "# Calculate the average price for each combination of availability category and stay duration\n",
