--- a/notebooks/question_1/data_cleaning.ipynb
+++ b/notebooks/question_1/data_cleaning.ipynb
@@ -38,7 +38,7 @@
     "import numpy as np\n",
     "from collections import Counter\n",
     "\n",
-    "# define a data preprocessing process\n",
+    "# define a data preprocessing pipeline\n",
     "def preprocess_data(df):\n",
     "    \"\"\"\n",
     "    Preprocess and clean the listings data.\n",
@@ -117,6 +117,8 @@
     "    \n",
     "    Returns:\n",
     "        df (pd.DataFrame): Airbnb listings data with binary data encoded to 0 or 1.\n",
+    "    Note:\n",
+    "    Check https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.LabelEncoder.html for more info about target label encoding using sklearn.\n",
     "\n",
     "    \"\"\"\n",
     "    binary_cols = ['host_is_superhost', 'host_has_profile_pic', 'host_identity_verified',  'instant_bookable', 'has_availability']\n",
@@ -147,6 +149,9 @@
     "        Returns:\n",
     "            col_encoded_df (pd.DataFrame): Dataframe containing encoded column\n",
     "\n",
+    "        Notes:\n",
+    "        Check https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.OneHotEncoder.html for one hot encoding.\n",
+    "\n",
     "        \"\"\"\n",
     "        label_encoder = sklearn.preprocessing.OneHotEncoder(sparse=False)\n",
     "        col_encoded = label_encoder.fit_transform(df[[col]])\n",
@@ -161,7 +166,7 @@
     "            txt_str (str): Text string containing bathroom information\n",
     "        \n",
     "        Returns:\n",
-    "            baths (tuple): Tuple containing number of bathrooms and shared bathrooms\n",
+    "            baths (tuple): Tuple containing number of private bathrooms and shared bathrooms\n",
     "\n",
     "        \"\"\"\n",
     "        if pd.isna(txt_str):\n",
@@ -205,7 +210,7 @@
     "    def encode_mlcat_col(df, col):\n",
     "        \"\"\"\n",
     "        Encode a column using MultiLabelBinarizer to handle multiple classes.\n",
-    "\n",
+    "        It transforms the col data into one-hot encoded format.\n",
     "        Args:\n",
     "            df (pd.DataFrame): Data containing categorical columns with multiple classes. \n",
     "            col (str): The column to encode \n",
