--- a/notebooks/question_3/question3.ipynb
+++ b/notebooks/question_3/question3.ipynb
@@ -50,13 +50,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# CELL STATUS: FINISHED\n",
-    "\n",
     "# Function to remove outliers \n",
     "def remove_data_outliers(df, column, threshold=1.5):\n",
     "    \"\"\"\n",
-    "    Detect and removel outliers accoding to a threshold (defaults to following the 1.5 . IQR rule).\n",
-    "\n",
+    "    Detect and removel outliers usin InterQuartile Range according to a threshold (defaults to following the 1.5 . IQR rule).\n",
+    "    Called alse Tukey Fences.\n",
     "    Args:\n",
     "        df (pandas.DataFrame): Dataframe to remove outliers from\n",
     "        column (str): Column to remove outliers from\n",
@@ -66,6 +64,7 @@
     "\n",
     "    Notes:\n",
     "    Some references:\n",
+    "    https://sphweb.bumc.bu.edu/otlt/mph-modules/bs/bs704_summarizingdata/bs704_summarizingdata7.html\n",
     "    https://stackoverflow.com/questions/74683825/how-do-i-remove-outliers-from-a-column-in-a-dataframe\n",
     "    https://www.kaggle.com/code/kenjee/dealing-with-outliers-section-5-2\n",
     "    \"\"\"\n",
@@ -2551,8 +2550,6 @@
     "import plotly.io as pio\n",
     "from PIL import Image\n",
     "from IPython.display import display\n",
-    "\n",
-    "import io\n",
     "\n",
     "save_dir = '../../reports/figures/question_3/'\n",
     "\n",
